[tool.poetry]
name = "project1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langserve = {extras = ["client"], version = "^0.0.51"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
